--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,56 @@ button {
 button:hover {
     background-color: #005f73;
 }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+table, th, td {
+    border: 1px solid #ddd;
+}
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+.btn {
+    padding: 5px 10px;
+    text-decoration: none;
+    color: white;
+    border-radius: 3px;
+}
+.btn-edit {
+    background-color: #4CAF50; /* Warna hijau */
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.btn-delete {
+    background-color: #f44336; /* Warna merah */
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 3px;
+}
+.pagination {
+    margin-top: 20px;
+}
+.pagination a {
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    color: #008CBA;
+}
+.pagination a.active {
+    background-color: #008CBA;
+    color: white;
+    border: 1px solid #008CBA;
+}
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
+}
